--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -4,21 +4,21 @@ http {
     #Primero debemos crear una zona en la cual se encuentren definidos todos los micro servicios
     upstream auth_service { 
         #Este es el micro servicio encargado de registrar a los usuarios, hacer login y entregar tokens y registrar planes
-        server http://0.0.0.0:8080; #Solamente sera uno el servidor pero podria existir el caso de que exista más de un servidor que entregue tokens
-     };
+        server auth:8000; #Solamente sera uno el servidor pero podria existir el caso de que exista más de un servidor que entregue tokens
+     }
      upstream cloud_driving {
         #Esta colección de servicios es el encargado de gestionar archivos y toda la logica de particionado compartido de disco
-        server http://0.0.0.0:8090;
-     };
+        server cloud:8000;
+     }
 
     server {
-        listen 8000;
+        listen 8080;
         
         location /auth {
             proxy_pass http://auth_service;
         }
 
-        location /accounts {
+        location /cloud {
             proxy_pass http://cloud_driving;
         }
     }
