--- a/backend/cloud/.env
+++ b/backend/cloud/.env
@@ -1,1 +1,3 @@
-EMPLOYEE_SECRET_KEY=4e3fa267b5f89f495c981f70b33d3eb5
+EMPLOYEE_SECRET_KEY= "4e3fa267b5f89f495c981f70b33d3eb5"
+ALGORITHM_JWT = "HS256"
+EXPIRE_TOKEN_MINUTES = 15
