login y sign funcionales sin configuracion de carpeta en sistema

--- a/backend/auth/.env
+++ b/backend/auth/.env
@@ -1,4 +1,5 @@
 EMPLOYEE_SECRET_KEY= "4e3fa267b5f89f495c981f70b33d3eb5"
 ALGORITHM_JWT = "HS256"
 EXPIRE_TOKEN_MINUTES = 15
-WEBHOOK_URL = "http://cloud_server:8000/new_user"
+WEBHOOK_START_TRANSACTION = "http://nginx:8080/cloud/webhooks/register_webhook"
+WEBHOOK_NEW_ACCOUNT_URL = "http://nginx:8080/cloud/webhooks/configure_dir_account"
