FIX: Resolución de problemas con cors y agregación de .gitignore

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -13,8 +13,30 @@ http {
 
     server {
         listen 8080;
+        # Configuración para permitir CORS desde cualquier origen
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' '*' always;
+        add_header 'Access-Control-Allow-Headers' '*' always;
+        add_header 'Access-Control-Allow-Credentials' 'false' always;
+        location / {
+            # Si es una solicitud OPTIONS, devolver una respuesta vacía con código 204 (sin contenido)
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' '*' always;
+                add_header 'Access-Control-Allow-Headers' '*' always;
+                add_header 'Access-Control-Allow-Credentials' 'false' always;
+                return 204;
+            }
+        }
         
         location /auth {
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' '*' always;
+                add_header 'Access-Control-Allow-Headers' '*' always;
+                add_header 'Access-Control-Allow-Credentials' 'false' always;
+                return 204;
+            }
             proxy_pass http://auth_service;
         }
 
