--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,15 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "filepond": "^4.31.4",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
