--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2",
     "vaul": "^1.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
