--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
