--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
         add_header 'Access-Control-Allow-Headers' '*' always;
         add_header 'Access-Control-Allow-Credentials' 'false' always;
         location / {
-            # Si es una solicitud OPTIONS, devolver una respuesta vacía con código 204 (sin contenido)
+            # Si es una solicitud OPTIONS, devolver una respuestqa vacía con código 204 (sin contenido)
             if ($request_method = OPTIONS) {
                 add_header 'Access-Control-Allow-Origin' '*' always;
                 add_header 'Access-Control-Allow-Methods' '*' always;
