--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.53.1",
+    "react-icon-cloud": "^4.1.4",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
