FIX: Resolución de bug /tree 500 , sizeBar y demases
Se solucionaron los errores periodicos de /tree así como la obtención de
los resultados desde el sizeBar, de igual manera de solucionaron bugs de
creación de carpetas con nombres de espacios y se modificaron estados
para la codificación en URI de los parametros relativos de ApiRoute de
Next y por ultimo se integro total funcionalidad de las descargas de
compartidos conmigo, mediante una exahustiva refactorización de backend
del micro servicio cloud.

--- a/backend/nginx/nginx.conf
+++ b/backend/nginx/nginx.conf
@@ -13,6 +13,8 @@ http {
 
     server {
         listen 8080;
+        # Configuración del tamaño del body que puede enviar el cliente
+        client_max_body_size 100M;
         # Configuración para permitir CORS desde cualquier origen
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' '*' always;
